--- a/Clase 07/Homework_07.ipynb
+++ b/Clase 07/Homework_07.ipynb
@@ -21,147 +21,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Nodo:\n",
+    "class Nodo():\n",
     "    def __init__(self, dato):\n",
-    "        self.izq = None\n",
-    "        self.der = None\n",
     "        self.dato = dato\n",
+    "        self.izq = None\n",
+    "        self.der = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Arbol():\n",
+    "    def __init__(self):\n",
+    "        self.raiz = None\n",
     "\n",
     "    def insertaVal(self, dato):\n",
-    "        if self.dato:\n",
-    "            if dato < self.dato:\n",
-    "                if self.izq == None:\n",
-    "                    self.izq = Nodo(dato)\n",
-    "                else:\n",
-    "                    self.izq.insertaVal(dato)\n",
-    "            elif dato > self.dato:\n",
-    "                if self.der == None:\n",
-    "                    self.der = Nodo(dato)\n",
-    "                else:\n",
-    "                    self.der.insertaVal(dato)\n",
+    "        n = Nodo(dato)\n",
+    "        if (self.raiz == None):\n",
+    "            self.raiz = n\n",
     "        else:\n",
-    "            self.dato = dato\n",
-    "\n",
-    "    def buscaVal(self, lkpval):\n",
-    "        if lkpval < self.dato:\n",
-    "            if self.izq == None:\n",
-    "                return False\n",
-    "            return self.izq.buscaVal(lkpval)\n",
-    "        elif lkpval > self.dato:\n",
-    "            if self.der == None:\n",
-    "                return False\n",
-    "            return self.der.buscaVal(lkpval)\n",
-    "        else:\n",
-    "            return True\n",
-    "\n",
-    "    def verVal(self):\n",
-    "        if self.izq:\n",
-    "            self.izq.verVal()\n",
-    "        print(self.dato)\n",
-    "        if self.der:\n",
-    "            self.der.verVal()"
+    "            puntero = self.raiz\n",
+    "            if (puntero.izq == None):\n",
+    "                puntero.izq = n\n",
+    "            if (puntero.der == None):\n",
+    "                puntero.der = n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "root = Nodo(10)"
+    "a = Arbol()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "root.insertaVal(3)\n",
-    "root.insertaVal(13)\n",
-    "root.insertaVal(1)\n",
-    "root.insertaVal(8)\n",
-    "root.insertaVal(20)"
+    "a.insertaVal(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "8 Encontrado!\n"
-     ]
-    }
-   ],
-   "source": [
-    "valorBuscado = 8\n",
-    "if (root.buscaVal(valorBuscado)):\n",
-    "    print(valorBuscado, 'Encontrado!')\n",
-    "else:\n",
-    "    print(valorBuscado, 'No Encontrado!')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "3\n",
-      "8\n",
-      "10\n",
-      "13\n",
-      "20\n"
-     ]
-    }
-   ],
-   "source": [
-    "root.verVal()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "root.insertaVal(9)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "3\n",
-      "8\n",
-      "9\n",
-      "10\n",
-      "13\n",
-      "20\n"
-     ]
-    }
-   ],
-   "source": [
-    "root.verVal()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
