--- a/Clase 08/Homework_08 Resuleto.ipynb
+++ b/Clase 08/Homework_08 Resuleto.ipynb
@@ -31,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def ListaDesordenada(desorden, cantidad): \n",
+    "def ListaDesordenada(desorden, cantidad):\n",
     "    '''\n",
     "    Esta función devuelve una lista\n",
     "    desorden = es un porcentaje de desordenamiento\n",
@@ -63,7 +63,7 @@
     {
      "data": {
       "text/plain": [
-       "[18, 5, 11, 14, 4, 7, 0, 16, 8, 9, 10, 2, 12, 3, 13, 1, 6, 17, 15, 19]"
+       "[3, 17, 9, 6, 10, 2, 7, 14, 15, 8, 5, 11, 12, 1, 19, 18, 16, 13, 4, 0]"
       ]
      },
      "execution_count": 2,
@@ -103,7 +103,7 @@
     {
      "data": {
       "text/plain": [
-       "[2, 1, 0, 3, 4]"
+       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19]"
       ]
      },
      "execution_count": 4,
@@ -112,59 +112,43 @@
     }
    ],
    "source": [
-    "ListaDesordenada(50, 5) #Lista de 20 elementos un 0% desordenada"
+    "ListaDesordenada(0, 20) #Lista de 20 elementos un 0% desordenada"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def ord_por_seleccion(lista):\n",
-    "    tope = len(lista)\n",
+    "    total = len(lista) - 1\n",
     "    i = 0\n",
-    "    while(i<(tope-1)):\n",
-    "        min = i\n",
-    "        j = i\n",
-    "        while(j<tope):\n",
-    "            if(lista[min] > lista[j]):\n",
-    "                min = j\n",
+    "    while(i < total):\n",
+    "        j = i + 1\n",
+    "        minimo = i\n",
+    "        while(j <= total):\n",
+    "            if(lista[j] < lista[minimo]):\n",
+    "                minimo = j\n",
     "            j+=1\n",
-    "        aux = lista[i]\n",
-    "        lista[i] = lista[min]\n",
-    "        lista[min] = aux\n",
+    "        if(lista[i] > lista[minimo]):\n",
+    "            aux = lista[i]\n",
+    "            lista[i] = lista[minimo]\n",
+    "            lista[minimo] = aux\n",
     "        i+=1\n",
     "    return lista"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def orden_seleccion(lista):\n",
-    "    last = (len(lista) - 1)\n",
-    "    for i in range(0,last):\n",
-    "        minimo_actual = i\n",
-    "        for j in range(i+1,last+1):\n",
-    "            if lista[minimo_actual] > lista[j]:\n",
-    "                minimo_actual = j\n",
-    "        lista[minimo_actual], lista[i] = lista[i], lista[minimo_actual]\n",
-    "    return lista"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[9, 17, 7, 3, 6, 5, 2, 18, 8, 14, 10, 4, 12, 15, 11, 0, 1, 13, 16, 19]\n"
+      "[19, 13, 14, 16, 4, 0, 12, 18, 8, 6, 15, 7, 10, 3, 17, 9, 11, 1, 5, 2]\n"
      ]
     }
    ],
@@ -175,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -184,27 +168,7 @@
        "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19]"
       ]
      },
-     "execution_count": 77,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "orden_seleccion(lis)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19]"
-      ]
-     },
-     "execution_count": 78,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,36 +179,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "def ord_por_burbujeo(lista):\n",
-    "    tope = len(lista) - 1\n",
-    "    intercambio = True\n",
-    "    while(intercambio):\n",
+    "    total = len(lista) - 1\n",
+    "    cambio = True\n",
+    "    while(cambio):\n",
+    "        cambio = False\n",
     "        i = 0\n",
-    "        intercambio = False\n",
-    "        while(i< tope):\n",
+    "        while(i < total):\n",
     "            if(lista[i] > lista[i+1]):\n",
     "                aux = lista[i]\n",
     "                lista[i] = lista[i+1]\n",
     "                lista[i+1] = aux\n",
-    "                intercambio = True\n",
+    "                cambio = True\n",
     "            i+=1\n",
     "    return lista"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2, 15, 13, 3, 4, 0, 6, 5, 10, 16, 8, 7, 18, 12, 17, 14, 19, 9, 1, 11]\n"
+      "[17, 15, 2, 14, 18, 0, 6, 16, 10, 8, 1, 12, 11, 13, 4, 9, 5, 19, 3, 7]\n"
      ]
     }
    ],
@@ -255,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +228,7 @@
        "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19]"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -310,36 +274,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
-    "N = 50000"
+    "N = 10000"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
     "lis1 = ListaDesordenada(100, N)\n",
-    "lis2 = lis1.copy()\n",
-    "lis3 = lis1.copy()"
+    "lis2 = lis1.copy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2842253907968"
+       "2402646353728"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,16 +313,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2842253819072"
+       "2402641873472"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,34 +333,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2842253876928"
-      ]
-     },
-     "execution_count": 94,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "id(lis3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Llevo 17.195520401000977 segundos en total.\n"
+      "Llevo 10.99217963218689 segundos en total.\n"
      ]
     }
    ],
@@ -410,14 +353,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Llevo 5.867834806442261 segundos en total.\n"
+      "Llevo 3.498922109603882 segundos en total.\n"
      ]
     }
    ],
@@ -430,45 +373,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Llevo 3.6709096431732178 segundos en total.\n"
-     ]
-    }
-   ],
-   "source": [
-    "start_time_total = time.time()\n",
-    "lis2 = orden_seleccion(lis3)\n",
-    "total_time_total = time.time() - start_time_total\n",
-    "print(\"Llevo {} segundos en total.\".format(total_time_total))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
     "lis1 = ListaDesordenada(50, N)\n",
-    "lis2 = lis1.copy()\n",
-    "lis3 = lis1.copy()"
+    "lis2 = lis1.copy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Llevo 16.916188955307007 segundos en total.\n"
+      "Llevo 10.38194489479065 segundos en total.\n"
      ]
     }
    ],
@@ -481,14 +403,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Llevo 194.11073541641235 segundos en total.\n"
+      "Llevo 3.541792631149292 segundos en total.\n"
      ]
     }
    ],
@@ -501,83 +423,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Llevo 125.12103462219238 segundos en total.\n"
-     ]
-    }
-   ],
-   "source": [
-    "start_time_total = time.time()\n",
-    "lis3 = orden_seleccion(lis3)\n",
-    "total_time_total = time.time() - start_time_total\n",
-    "print(\"Llevo {} segundos en total.\".format(total_time_total))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 117,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lis1 = ord_por_burbujeo(lis1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 115,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lis1.sort()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 116,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]"
-      ]
-     },
-     "execution_count": 116,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lis1[0:12]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
     "lis1 = ListaDesordenada(0, N)\n",
-    "lis2 = lis1.copy()\n",
-    "lis3 = lis1.copy()"
+    "lis2 = lis1.copy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Llevo 0.004536628723144531 segundos en total.\n"
+      "Llevo 0.002012968063354492 segundos en total.\n"
      ]
     }
    ],
@@ -590,40 +453,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Llevo 5.318761587142944 segundos en total.\n"
+      "Llevo 3.5221502780914307 segundos en total.\n"
      ]
     }
    ],
    "source": [
     "start_time_total = time.time()\n",
     "lis2 = ord_por_seleccion(lis2)\n",
-    "total_time_total = time.time() - start_time_total\n",
-    "print(\"Llevo {} segundos en total.\".format(total_time_total))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 105,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Llevo 3.506283760070801 segundos en total.\n"
-     ]
-    }
-   ],
-   "source": [
-    "start_time_total = time.time()\n",
-    "lis2 = orden_seleccion(lis3)\n",
     "total_time_total = time.time() - start_time_total\n",
     "print(\"Llevo {} segundos en total.\".format(total_time_total))"
    ]
