--- a/Clase 05/Homework_05 Resuelto.ipynb
+++ b/Clase 05/Homework_05 Resuelto.ipynb
@@ -167,6 +167,204 @@
    "source": [
     "<img src='Juego_Jarras.png'>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Jarra():\n",
+    "    def __init__(self, cap):\n",
+    "        self.__elemento_agua = '*'\n",
+    "        self.__elemento_vacio = ' '\n",
+    "        self.__capacidad = cap\n",
+    "        self.__lista = []\n",
+    "        i = 0\n",
+    "        while(i < cap):\n",
+    "            self.__lista.append(self.__elemento_vacio)\n",
+    "            i+=1\n",
+    "\n",
+    "    def vaciar(self):\n",
+    "        i = 0\n",
+    "        while(i < self.__capacidad):\n",
+    "            self.__lista[i] = self.__elemento_vacio\n",
+    "            i+=1\n",
+    "    \n",
+    "    def llenar(self):\n",
+    "        i = 0\n",
+    "        while(i < self.__capacidad):\n",
+    "            self.__lista[i] = self.__elemento_agua\n",
+    "            i+=1\n",
+    "\n",
+    "    def mostrarJarra(self):\n",
+    "        print('Jarra de', self.__capacidad, 'litros:')\n",
+    "        for e in self.__lista:\n",
+    "            print('|',e,'|')\n",
+    "        print('-----')\n",
+    "\n",
+    "    def cantidadLitros(self):\n",
+    "        cantidad = 0\n",
+    "        for e in self.__lista:\n",
+    "            if(e == self.__elemento_agua):\n",
+    "                cantidad+=1\n",
+    "        return cantidad\n",
+    "\n",
+    "    def quitarLitros(self, litros):\n",
+    "        i = 0\n",
+    "        encontrado = False\n",
+    "        while(not encontrado):\n",
+    "            if (self.__lista[i] == self.__elemento_agua):\n",
+    "                encontrado = True\n",
+    "            i+=1\n",
+    "        i-=1\n",
+    "        while(litros > 0):\n",
+    "            self.__lista[i] = self.__elemento_vacio\n",
+    "            i+=1\n",
+    "            litros-=1\n",
+    "\n",
+    "    def agregarLitros(self, litros):\n",
+    "        i = 0\n",
+    "        while((i < self.__capacidad) and (self.__lista[i] == self.__elemento_vacio)):\n",
+    "            i+=1\n",
+    "        while(litros > 0):\n",
+    "            i-=1\n",
+    "            self.__lista[i] = self.__elemento_agua\n",
+    "            litros-=1\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "j = Jarra(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jarra de 5 litros:\n",
+      "|   |\n",
+      "|   |\n",
+      "| * |\n",
+      "| * |\n",
+      "| * |\n",
+      "-----\n"
+     ]
+    }
+   ],
+   "source": [
+    "j.mostrarJarra()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "j.agregarLitros(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "j.quitarLitros(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class JuegoJarras():\n",
+    "    def __init__(self):\n",
+    "        self.__j3L = Jarra(3)\n",
+    "        self.__j5L = Jarra(5)\n",
+    "        self.__opciones_validas = ['1','2','3','4','5','6','7']\n",
+    "\n",
+    "    def jugar(self):\n",
+    "        nro = 0\n",
+    "        while(nro < 7):\n",
+    "            print('Juego de las Jarras!:')\n",
+    "            print('*********************')\n",
+    "            print('1 - Llenar jarra de 3L')\n",
+    "            print('2 - Llenar jarra de 5L')\n",
+    "            print('3 - Vaciar jarra de 3L')\n",
+    "            print('4 - Vaciar jarra de 5L')\n",
+    "            print('5 - Verter el contenido de jarra de 3L en la jarra de 5L')\n",
+    "            print('6 - Verter el contenido de jarra de 5L en la jarra de 3L')\n",
+    "            print('7 - Salir')\n",
+    "            print('****************')\n",
+    "            self.__j3L.mostrarJarra()\n",
+    "            self.__j5L.mostrarJarra()\n",
+    "            print('****************')\n",
+    "            nro = input('Por favor, ingrese una opción:')\n",
+    "            if (nro not in self.__opciones_validas):\n",
+    "                nro = 0\n",
+    "            else:\n",
+    "                nro = int(nro)\n",
+    "            if (nro == 1):\n",
+    "                self.__j3L.llenar()\n",
+    "            elif (nro == 2):\n",
+    "                self.__j5L.llenar()\n",
+    "            elif (nro == 3):\n",
+    "                self.__j3L.vaciar()\n",
+    "            elif (nro == 4):\n",
+    "                self.__j5L.vaciar()\n",
+    "            elif (nro == 5):\n",
+    "                jarra3L = self.__j3L.cantidadLitros()\n",
+    "                jarra5L = self.__j5L.cantidadLitros()\n",
+    "                dispJarra5L = 5 - jarra5L\n",
+    "                if (dispJarra5L < jarra3L):\n",
+    "                    intercambio = dispJarra5L\n",
+    "                else:\n",
+    "                    intercambio = jarra3L\n",
+    "                self.__j3L.quitarLitros(intercambio)\n",
+    "                self.__j5L.agregarLitros(intercambio)\n",
+    "            elif (nro == 6):\n",
+    "                jarra3L = self.__j3L.cantidadLitros()\n",
+    "                jarra5L = self.__j5L.cantidadLitros()\n",
+    "                dispJarra3L = 3 - jarra3L\n",
+    "                if (dispJarra3L < jarra5L):\n",
+    "                    intercambio = dispJarra3L\n",
+    "                else:\n",
+    "                    intercambio = jarra5L\n",
+    "                self.__j5L.quitarLitros(intercambio)\n",
+    "                self.__j3L.agregarLitros(intercambio)\n",
+    "\n",
+    "            if(self.__j5L.cantidadLitros() == 4):\n",
+    "                print('Felicitaciones!:')\n",
+    "                print('****************')\n",
+    "                self.__j3L.mostrarJarra()\n",
+    "                self.__j5L.mostrarJarra()\n",
+    "                print('****************')\n",
+    "                print('1 - Jugar de nuevo')\n",
+    "                print('2 - Terminar')\n",
+    "                nro = input('Por favor, ingrese una opción:')\n",
+    "                if (nro not in self.__opciones_validas):\n",
+    "                    nro = 0\n",
+    "                else:\n",
+    "                    nro = int(nro)\n",
+    "                    if (nro == 1):\n",
+    "                        self.__j3L.vaciar()\n",
+    "                        self.__j5L.vaciar()\n",
+    "                    elif (nro == 2):\n",
+    "                        nro = 7"
+   ]
   }
  ],
  "metadata": {
