--- a/Clase 09/Homework_09 Resuelto.ipynb
+++ b/Clase 09/Homework_09 Resuelto.ipynb
@@ -1,8 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Práctica Clase 9"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>Grafos</h2>\n",
+    "<p>En la imagen se representa un grafo, para el cuál deberas hacer la representación en su matríz de adyacencia y utilizar la clase Grafos provista, para calcular la distancia de un vértice hacia todos los demás</p>\n",
+    "<img src=\"grafos_ejemplo.jpg\" height=\"200px\">\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,54 +60,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-       " [0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-       " [0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-       " [0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-       " [0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-       " [0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-       " [0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-       " [0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-       " [0, 0, 0, 0, 0, 0, 0, 0, 0]]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "f = Graph(9)\n",
-    "f.graph"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "f.graph = [[0, 4, 0, 0, 0, 0, 0, 8, 0],\n",
-    "           [4, 0, 8, 0, 0, 0, 0, 11, 0],\n",
-    "           [0, 8, 0, 7, 0, 4, 0, 0, 2],\n",
-    "           [0, 0, 7, 0, 9, 14, 0, 0, 0],\n",
-    "           [0, 0, 0, 9, 0, 10, 0, 0, 0],\n",
-    "           [0, 0, 4, 14, 10, 0, 2, 0, 0],\n",
-    "           [0, 0, 0, 0, 0, 2, 0, 1, 6],\n",
-    "           [8, 11, 0, 0, 0, 0, 1, 0, 7],\n",
-    "           [0, 0, 2, 0, 0, 0, 6, 7, 0]\n",
-    "           ]"
+    "f = Graph(5)\n",
+    "f.graph = [[0, 1, 0, 0, 0],\n",
+    "           [1, 0, 1, 1, 0],\n",
+    "           [0, 1, 0, 0, 0],\n",
+    "           [0, 1, 0, 0, 1],\n",
+    "           [0, 0, 0, 1, 0]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -100,14 +83,10 @@
      "text": [
       "Distancia del vértice desde el orígen\n",
       "0 t 0\n",
-      "1 t 4\n",
-      "2 t 12\n",
-      "3 t 19\n",
-      "4 t 21\n",
-      "5 t 11\n",
-      "6 t 9\n",
-      "7 t 8\n",
-      "8 t 14\n"
+      "1 t 1\n",
+      "2 t 2\n",
+      "3 t 2\n",
+      "4 t 3\n"
      ]
     }
    ],
@@ -117,11 +96,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "c85384e4cb51c8b72350f3a8712cc8351fdc3955e32a27f9b60c6242ab125f01"
-  },
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('henry')",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -136,9 +112,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.7"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
